tests/field/get_on_function.out
[31merror[error]: 'function' object has no attribute 'bar'
----- Traceback -----
  ┌─ <unknown>:4:7
  | 
4 | foo.bar
  |        ^
[0m