tests/field/get_on_function.my
def foo():
  pass

foo.bar
